--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ko">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <title>회수금 계산기</title>
 
   <!-- PWA 관련 메타 태그 -->
@@ -22,7 +22,7 @@
   <script crossorigin src="https://unpkg.com/react@18/umd/react.production.min.js"></script>
   <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js"></script>
   <!-- Babel CDN for JSX support -->
-  <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+  <script src="https://unpkg.com/@babel/standalone/babel.js"></script>
 
   <style>
     /* Prevent number input spin buttons */
@@ -108,7 +108,7 @@
     const renderItem = (denom) => (
       // 세로 여백을 py-1로 줄여서 전체 높이 축소
       <div key={denom.value} className="flex items-center justify-between py-1 border-b border-gray-300">
-        <div className="flex-1 min-w-0 pr-1">
+        <div className="w-20 pr-1">
           {/* 글자 크기를 text-sm으로 줄여서 공간 확보 */}
           <span className="text-gray-700 text-sm font-medium whitespace-nowrap overflow-hidden text-ellipsis">{denom.name}</span>
         </div>
@@ -120,7 +120,7 @@
             placeholder="0"
             value={quantities[denom.value]}
             onChange={(e) => handleInputChange(e.target.value, denom)}
-            // 입력 필드 높이 및 너비 조절
+            // 입력 필드 높이 및 너비 조절, 텍스트를 오른쪽으로 정렬
             className="w-16 h-8 text-right text-gray-800 text-sm font-bold bg-gray-200 rounded-md p-1 focus:outline-none focus:ring-2 focus:ring-blue-500 appearance-none [-moz-appearance:_textfield] [&::-webkit-inner-spin-button]:m-0 [&::-webkit-inner-spin-button]:appearance-none [&::-webkit-outer-spin-button]:m-0 [&::-webkit-outer-spin-button]:appearance-none"
           />
           <span className="text-gray-500 text-xs">개</span>
