--- a/index.html
+++ b/index.html
@@ -106,14 +106,15 @@
 
     // UI 구성 요소 렌더링
     const renderItem = (denom) => (
-      // 세로 여백을 py-1로 줄여서 전체 높이 축소
-      <div key={denom.value} className="flex items-center justify-between py-1 border-b border-gray-300">
-        <div className="w-20 pr-1">
+      // 기존 justify-between 대신 일반 flex로 변경하고 간격을 직접 조정
+      <div key={denom.value} className="flex items-center py-1 border-b border-gray-300">
+        <div className="w-24 pr-1 flex-shrink-0">
           {/* 글자 크기를 text-sm으로 줄여서 공간 확보 */}
           <span className="text-gray-700 text-sm font-medium whitespace-nowrap overflow-hidden text-ellipsis">{denom.name}</span>
         </div>
         
-        <div className="flex items-center space-x-1 flex-shrink-0">
+        {/* 수량 입력 필드 컨테이너에 20px만큼의 왼쪽 마진(ml-5)을 추가 */}
+        <div className="flex items-center space-x-1 ml-5 flex-shrink-0">
           <input
             type="text"
             inputMode="numeric"
@@ -126,7 +127,8 @@
           <span className="text-gray-500 text-xs">개</span>
         </div>
 
-        <div className="flex items-center justify-end w-[80px] ml-2 flex-shrink-0">
+        {/* 금액 부분은 남은 공간을 모두 차지하도록 flex-1을 사용하여 오른쪽으로 밀어냅니다 */}
+        <div className="flex-1 flex items-center justify-end ml-2 flex-shrink-0">
           {/* 금액 글자 크기 조절 */}
           <span className="font-semibold text-sm text-gray-900 whitespace-nowrap overflow-hidden text-ellipsis">
             {formatCurrency((parseInt(quantities[denom.value]) || 0) * denom.value)}
