--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
   <meta name="apple-mobile-web-app-title" content="계산기">
-  <link rel="apple-touch-icon" sizes="180x180" href="https://placehold.co/180x180/0f172a/fff?text=CC">
+  <!-- 업로드된 이미지 파일 URL로 변경 -->
+  <link rel="apple-touch-icon" sizes="180x180" href="http://googleusercontent.com/file_content/1">
   <meta name="theme-color" content="#0f172a">
   
   <!-- manifest.json 파일 링크 -->
@@ -222,12 +223,12 @@
   "theme_color": "#0f172a",
   "icons": [
     {
-      "src": "https://placehold.co/192x192/0f172a/fff?text=CC",
+      "src": "http://googleusercontent.com/file_content/1",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "https://placehold.co/512x512/0f172a/fff?text=CC",
+      "src": "http://googleusercontent.com/file_content/1",
       "sizes": "512x512",
       "type": "image/png"
     }
