--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="ko">
 <head>
   <meta charset="UTF-8">
@@ -10,7 +10,7 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
   <meta name="apple-mobile-web-app-title" content="계산기">
   <!-- 업로드된 이미지 파일 URL로 변경 -->
-  <link rel="apple-touch-icon" sizes="180x180" href="/Ios Calculator 3D Il.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="https://placehold.co/180x180/0f172a/fff?text=CC">
   <meta name="theme-color" content="#0f172a">
   
   <!-- manifest.json 파일 링크 -->
@@ -223,12 +223,12 @@
   "theme_color": "#0f172a",
   "icons": [
     {
-      "src": "/Ios Calculator 3D Il.png",
+      "src": "https://placehold.co/180x180/0f172a/fff?text=CC",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "/Ios Calculator 3D Il.png",
+      "src": "https://placehold.co/180x180/0f172a/fff?text=CC",
       "sizes": "512x512",
       "type": "image/png"
     }
