--- a/index.html
+++ b/index.html
@@ -155,24 +155,6 @@
       };
     }, [quantities, denominationAmounts, prevVaultBalance, coinReplenishment, slipDiscrepancy, slipDiscrepancySign]);
 
-    // 새로운 항목들을 위한 공통 입력 컴포넌트
-    const InputItem = ({ label, value, onChange, placeholder = '0', textColor = 'text-gray-900' }) => (
-      <div className="flex items-center justify-between py-1 border-b border-gray-300 last:border-b-0">
-        <span className="text-gray-700 text-sm font-medium">{label}</span>
-        <div className="flex items-center space-x-1">
-          <input
-            type="text"
-            inputMode="numeric"
-            placeholder={placeholder}
-            value={value === '' ? '' : formatCurrency(parseInt(value || '0'))}
-            onChange={(e) => onChange(e.target.value.replace(/[^0-9]/g, ''))} // 숫자만 허용
-            className={`w-24 h-8 text-right text-sm font-bold bg-gray-200 rounded-md p-1 focus:outline-none focus:ring-2 focus:ring-blue-500 no-spinner ${textColor}`}
-          />
-          <span className="text-gray-500 text-xs">원</span>
-        </div>
-      </div>
-    );
-
     // 동전보충 전용 컴포넌트
     const CoinReplenishmentItem = ({ value, onChange }) => {
       return (
@@ -201,8 +183,9 @@
 
       return (
         <div className="flex items-center justify-between py-1 border-b border-gray-300 last:border-b-0">
-          <span className="text-gray-700 text-sm font-medium">전표상이</span>
+          {/* Label and buttons moved here */}
           <div className="flex items-center space-x-2">
+            <span className="text-gray-700 text-sm font-medium">전표상이</span>
             <button
               onClick={() => onTypeChange(type === 'minus' ? 'none' : 'minus')}
               className={`px-2 py-1 rounded-md text-sm font-bold ${type === 'minus' ? 'bg-red-500 text-white' : 'bg-gray-200 text-gray-700'} hover:opacity-80 transition-opacity`}
@@ -215,6 +198,10 @@
             >
               +
             </button>
+          </div>
+          
+          {/* Input field and '원' */}
+          <div className="flex items-center space-x-1">
             {prefix && value !== '' && <span className={`font-semibold text-sm ${textColor}`}>{prefix}</span>}
             <input
               type="text"
@@ -279,6 +266,24 @@
             </button>
           </div>
 
+          {/* 마감 전 금고 잔액 - New Section */}
+          <div className="bg-slate-800 rounded-xl p-3 shadow-lg text-white">
+            <div className="flex justify-between items-center">
+              <h2 className="text-lg font-bold">마감 전 금고 잔액</h2>
+              <div className="flex items-center space-x-1">
+                <input
+                  type="text"
+                  inputMode="numeric"
+                  placeholder="0"
+                  value={prevVaultBalance === '' ? '' : formatCurrency(parseInt(prevVaultBalance || '0'))}
+                  onChange={(e) => setPrevVaultBalance(e.target.value.replace(/[^0-9]/g, ''))}
+                  className="w-32 h-8 text-right text-xl font-extrabold bg-gray-200 text-amber-300 rounded-md p-1 focus:outline-none focus:ring-2 focus:ring-blue-500 no-spinner"
+                />
+                <span className="text-gray-300 text-xs">원</span>
+              </div>
+            </div>
+          </div>
+
           {/* 지폐 섹션 */}
           <div className="bg-white rounded-xl p-2 shadow-md border border-gray-200">
             <h2 className="text-base font-bold text-gray-800 mb-1">💵 지폐</h2>
@@ -312,11 +317,6 @@
           {/* 추가 항목 섹션 */}
           <div className="bg-white rounded-xl p-2 shadow-md border border-gray-200 space-y-1">
             <h2 className="text-base font-bold text-gray-800 mb-1">📊 추가 항목</h2>
-            <InputItem
-              label="마감 전 금고 잔액"
-              value={prevVaultBalance}
-              onChange={setPrevVaultBalance}
-            />
             <CoinReplenishmentItem
               value={coinReplenishment}
               onChange={setCoinReplenishment}
@@ -452,4 +452,4 @@
 </script>
 
 </body>
-</html>```
+</html>
