--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
               placeholder="0"
               value={value === '' ? '' : formatCurrency(parseInt(value || '0'))}
               onChange={(e) => onChange(e.target.value.replace(/[^0-9]/g, ''))}
-              className="w-24 h-8 text-right text-sm font-bold bg-gray-200 rounded-md p-1 focus:outline-none focus:ring-2 focus:ring-blue-500 no-spinner text-red-500"
+              className="w-28 h-8 text-right text-sm font-bold bg-gray-200 rounded-md p-1 focus:outline-none focus:ring-2 focus:ring-blue-500 no-spinner text-red-500"
             />
             <span className="text-gray-500 text-xs">원</span>
           </div>
@@ -209,7 +209,7 @@
               placeholder="0"
               value={value === '' ? '' : formatCurrency(parseInt(value || '0'))}
               onChange={(e) => onChange(e.target.value.replace(/[^0-9]/g, ''))}
-              className={`w-20 h-8 text-right text-sm font-bold bg-gray-200 rounded-md p-1 focus:outline-none focus:ring-2 focus:ring-blue-500 no-spinner ${textColor}`}
+              className={`w-28 h-8 text-right text-sm font-bold bg-gray-200 rounded-md p-1 focus:outline-none focus:ring-2 focus:ring-blue-500 no-spinner ${textColor}`}
             />
             <span className="text-gray-500 text-xs">원</span>
           </div>
@@ -277,7 +277,7 @@
                   placeholder="0"
                   value={prevVaultBalance === '' ? '' : formatCurrency(parseInt(prevVaultBalance || '0'))}
                   onChange={(e) => setPrevVaultBalance(e.target.value.replace(/[^0-9]/g, ''))}
-                  className="w-32 h-8 text-right text-xl font-extrabold bg-gray-200 text-amber-300 rounded-md p-1 focus:outline-none focus:ring-2 focus:ring-blue-500 no-spinner"
+                  className="w-32 h-8 text-right text-xl font-extrabold bg-black text-amber-300 rounded-md p-1 focus:outline-none focus:ring-2 focus:ring-blue-500 no-spinner"
                 />
                 <span className="text-gray-300 text-xs">원</span>
               </div>
@@ -286,7 +286,7 @@
 
           {/* 지폐 섹션 */}
           <div className="bg-white rounded-xl p-2 shadow-md border border-gray-200">
-            <h2 className="text-base font-bold text-gray-800 mb-1">💵 지폐</h2>
+            {/* <h2 className="text-base font-bold text-gray-800 mb-1">💵 지폐</h2> 삭제 */}
             {denominations.filter(d => d.type === 'bill').map(renderDenominationItem)}
             <div className="mt-2 pt-2 flex justify-between items-center font-bold text-sm text-gray-800">
               <span>지폐 소계:</span>
@@ -296,7 +296,7 @@
 
           {/* 동전 섹션 */}
           <div className="bg-white rounded-xl p-2 shadow-md border border-gray-200">
-            <h2 className="text-base font-bold text-gray-800 mb-1">🪙 동전</h2>
+            {/* <h2 className="text-base font-bold text-gray-800 mb-1">🪙 동전</h2> 삭제 */}
             {denominations.filter(d => d.type === 'coin').map(renderDenominationItem)}
             <div className="mt-2 pt-2 flex justify-between items-center font-bold text-sm text-gray-800">
               <span>동전 소계:</span>
@@ -316,7 +316,7 @@
 
           {/* 추가 항목 섹션 */}
           <div className="bg-white rounded-xl p-2 shadow-md border border-gray-200 space-y-1">
-            <h2 className="text-base font-bold text-gray-800 mb-1">📊 추가 항목</h2>
+            {/* <h2 className="text-base font-bold text-gray-800 mb-1">📊 추가 항목</h2> 삭제 */}
             <CoinReplenishmentItem
               value={coinReplenishment}
               onChange={setCoinReplenishment}
