--- a/index.html
+++ b/index.html
@@ -157,6 +157,8 @@
 
     // 동전보충 전용 컴포넌트
     const CoinReplenishmentItem = ({ value, onChange }) => {
+      const [isFocused, setIsFocused] = useState(false); // Add focus state
+
       return (
         <div className="flex items-center justify-between py-1 border-b border-gray-300 last:border-b-0">
           <span className="text-gray-700 text-sm font-medium">동전보충</span>
@@ -166,9 +168,12 @@
               type="text"
               inputMode="numeric"
               placeholder="0"
-              value={value === '' ? '' : formatCurrency(parseInt(value || '0'))}
+              // 포커스 상태에 따라 값 다르게 표시
+              value={isFocused ? value : (value === '' ? '' : formatCurrency(parseInt(value || '0')))}
+              onFocus={() => setIsFocused(true)}
+              onBlur={() => setIsFocused(false)}
               onChange={(e) => onChange(e.target.value.replace(/[^0-9]/g, ''))}
-              className="w-28 h-8 text-right text-sm font-bold bg-gray-200 rounded-md p-1 focus:outline-none focus:ring-2 focus:ring-blue-500 no-spinner text-red-500"
+              className="w-32 h-8 text-right text-sm font-bold bg-gray-200 rounded-md p-1 focus:outline-none focus:ring-2 focus:ring-blue-500 no-spinner text-red-500"
             />
             <span className="text-gray-500 text-xs">원</span>
           </div>
@@ -178,6 +183,7 @@
 
     // 전표상이 전용 컴포넌트
     const SlipDiscrepancyItem = ({ value, type, onChange, onTypeChange }) => {
+      const [isFocused, setIsFocused] = useState(false); // Add focus state
       const textColor = type === 'minus' ? 'text-red-500' : (type === 'plus' ? 'text-blue-500' : 'text-gray-900');
       const prefix = type === 'minus' ? '-' : (type === 'plus' ? '+' : '');
 
@@ -207,9 +213,12 @@
               type="text"
               inputMode="numeric"
               placeholder="0"
-              value={value === '' ? '' : formatCurrency(parseInt(value || '0'))}
+              // 포커스 상태에 따라 값 다르게 표시
+              value={isFocused ? value : (value === '' ? '' : formatCurrency(parseInt(value || '0')))}
+              onFocus={() => setIsFocused(true)}
+              onBlur={() => setIsFocused(false)}
               onChange={(e) => onChange(e.target.value.replace(/[^0-9]/g, ''))}
-              className={`w-28 h-8 text-right text-sm font-bold bg-gray-200 rounded-md p-1 focus:outline-none focus:ring-2 focus:ring-blue-500 no-spinner ${textColor}`}
+              className={`w-32 h-8 text-right text-sm font-bold bg-gray-200 rounded-md p-1 focus:outline-none focus:ring-2 focus:ring-blue-500 no-spinner ${textColor}`}
             />
             <span className="text-gray-500 text-xs">원</span>
           </div>
@@ -218,37 +227,46 @@
     };
 
     // UI 구성 요소 렌더링 (지폐/동전 항목)
-    const renderDenominationItem = (denom) => (
-      <div key={denom.value} className="flex items-center justify-between py-1 border-b border-gray-300 last:border-b-0">
-        <div className="flex-1 pr-1 min-w-[50px]">
-          <span className="text-gray-700 text-sm font-medium whitespace-nowrap overflow-hidden text-ellipsis">{denom.name}</span>
-        </div>
-        
-        <div className="flex items-center space-x-1 flex-shrink-0">
-          <input
-            type="text"
-            inputMode="numeric"
-            placeholder="0"
-            value={quantities[denom.value]}
-            onChange={(e) => handleQuantityChange(e.target.value, denom)}
-            className="w-14 h-8 text-right text-gray-800 text-sm font-bold bg-gray-200 rounded-md p-1 focus:outline-none focus:ring-2 focus:ring-blue-500 no-spinner"
-          />
-          <span className="text-gray-500 text-xs">개</span>
-        </div>
+    const renderDenominationItem = (denom) => {
+      const [isFocusedQuantity, setIsFocusedQuantity] = useState(false);
+      const [isFocusedAmount, setIsFocusedAmount] = useState(false);
 
-        <div className="flex items-center space-x-1 flex-shrink-0 ml-2">
-          <input
-            type="text"
-            inputMode="numeric"
-            placeholder="0"
-            value={denominationAmounts[denom.value] === '' ? '' : formatCurrency(parseInt(denominationAmounts[denom.value] || '0'))}
-            onChange={(e) => handleAmountChange(e.target.value, denom)}
-            className="w-24 h-8 text-right text-gray-800 text-sm font-bold bg-gray-200 rounded-md p-1 focus:outline-none focus:ring-2 focus:ring-blue-500 no-spinner"
-          />
-          <span className="text-gray-500 text-xs">원</span>
+      return (
+        <div key={denom.value} className="flex items-center justify-between py-1 border-b border-gray-300 last:border-b-0">
+          <div className="flex-1 pr-1 min-w-[50px]">
+            <span className="text-gray-700 text-sm font-medium whitespace-nowrap overflow-hidden text-ellipsis">{denom.name}</span>
+          </div>
+          
+          <div className="flex items-center space-x-1 flex-shrink-0">
+            <input
+              type="text"
+              inputMode="numeric"
+              placeholder="0"
+              value={isFocusedQuantity ? quantities[denom.value] : (quantities[denom.value] === '' ? '' : formatCurrency(parseInt(quantities[denom.value] || '0')))}
+              onFocus={() => setIsFocusedQuantity(true)}
+              onBlur={() => setIsFocusedQuantity(false)}
+              onChange={(e) => handleQuantityChange(e.target.value, denom)}
+              className="w-14 h-8 text-right text-gray-800 text-sm font-bold bg-gray-200 rounded-md p-1 focus:outline-none focus:ring-2 focus:ring-blue-500 no-spinner"
+            />
+            <span className="text-gray-500 text-xs">개</span>
+          </div>
+
+          <div className="flex items-center space-x-1 flex-shrink-0 ml-2">
+            <input
+              type="text"
+              inputMode="numeric"
+              placeholder="0"
+              value={isFocusedAmount ? denominationAmounts[denom.value] : (denominationAmounts[denom.value] === '' ? '' : formatCurrency(parseInt(denominationAmounts[denom.value] || '0')))}
+              onFocus={() => setIsFocusedAmount(true)}
+              onBlur={() => setIsFocusedAmount(false)}
+              onChange={(e) => handleAmountChange(e.target.value, denom)}
+              className="w-24 h-8 text-right text-gray-800 text-sm font-bold bg-gray-200 rounded-md p-1 focus:outline-none focus:ring-2 focus:ring-blue-500 no-spinner"
+            />
+            <span className="text-gray-500 text-xs">원</span>
+          </div>
         </div>
-      </div>
-    );
+      );
+    };
 
     return (
       <div className="min-h-screen bg-slate-900 font-sans flex flex-col items-center justify-center py-4">
@@ -286,7 +304,6 @@
 
           {/* 지폐 섹션 */}
           <div className="bg-white rounded-xl p-2 shadow-md border border-gray-200">
-            {/* <h2 className="text-base font-bold text-gray-800 mb-1">💵 지폐</h2> 삭제 */}
             {denominations.filter(d => d.type === 'bill').map(renderDenominationItem)}
             <div className="mt-2 pt-2 flex justify-between items-center font-bold text-sm text-gray-800">
               <span>지폐 소계:</span>
@@ -296,7 +313,6 @@
 
           {/* 동전 섹션 */}
           <div className="bg-white rounded-xl p-2 shadow-md border border-gray-200">
-            {/* <h2 className="text-base font-bold text-gray-800 mb-1">🪙 동전</h2> 삭제 */}
             {denominations.filter(d => d.type === 'coin').map(renderDenominationItem)}
             <div className="mt-2 pt-2 flex justify-between items-center font-bold text-sm text-gray-800">
               <span>동전 소계:</span>
@@ -316,7 +332,6 @@
 
           {/* 추가 항목 섹션 */}
           <div className="bg-white rounded-xl p-2 shadow-md border border-gray-200 space-y-1">
-            {/* <h2 className="text-base font-bold text-gray-800 mb-1">📊 추가 항목</h2> 삭제 */}
             <CoinReplenishmentItem
               value={coinReplenishment}
               onChange={setCoinReplenishment}
@@ -441,7 +456,7 @@
       return new Response(manifest, {
         headers: { 'Content-Type': 'application/json' }
       });
-    } else if (typeof input === 'string' && input.endsWith('/manifest.json')) {
+    } else if (typeof input === 'string' && input.url.endsWith('/manifest.json')) {
       return new Response(manifest, {
         headers: { 'Content-Type': 'application/json' }
       });
