--- a/index.html
+++ b/index.html
@@ -64,32 +64,47 @@
   };
 
   function App() {
-    const { useState, useMemo, useEffect } = React;
+    const { useState, useMemo } = React;
 
     // 각 화폐 단위의 수량을 저장하는 상태
     const [quantities, setQuantities] = useState(() =>
       denominations.reduce((acc, denom) => ({ ...acc, [denom.value]: '' }), {})
     );
 
-    // 새로운 기능: 금액을 개수로 변환하기 위한 입력 상태
-    const [inputTargetAmount, setInputTargetAmount] = useState('');
-
-    // 입력 필드 변경을 처리하는 함수
-    const handleInputChange = (value, denom) => {
-      // 숫자가 아닌 문자를 제거하고 빈 문자열을 0으로 변환
-      const cleanValue = value.replace(/[^0-9]/g, '');
+    // 개수 입력 필드 변경을 처리하는 함수
+    const handleQuantityChange = (value, denom) => {
+      const cleanValue = value.replace(/[^0-9]/g, ''); // 숫자만 허용
       setQuantities(prev => ({
         ...prev,
         [denom.value]: cleanValue
       }));
     };
 
-    // 모든 입력 필드를 초기화하는 함수 (새로운 입력 필드도 포함)
+    // 금액 입력 필드 변경을 처리하는 함수 (새로운 기능)
+    const handleAmountChange = (value, denom) => {
+      const cleanValue = value.replace(/[^0-9]/g, ''); // 숫자만 허용 (콤마 제거 포함)
+      const amount = parseInt(cleanValue) || 0;
+
+      if (denom.value === 0) { // 0으로 나누는 경우 방지 (현재 화폐 단위에는 해당 없음)
+        setQuantities(prev => ({ ...prev, [denom.value]: '' }));
+        return;
+      }
+
+      // 입력된 금액에 해당하는 개수 계산 (소수점 버림)
+      const calculatedQuantity = Math.floor(amount / denom.value);
+
+      // 입력 필드를 비웠을 때는 개수도 비우도록 처리
+      setQuantities(prev => ({
+        ...prev,
+        [denom.value]: cleanValue === '' ? '' : String(calculatedQuantity)
+      }));
+    };
+
+    // 모든 입력 필드를 초기화하는 함수
     const handleReset = () => {
       setQuantities(
         denominations.reduce((acc, denom) => ({ ...acc, [denom.value]: '' }), {})
       );
-      setInputTargetAmount(''); // 목표 금액 입력 필드 초기화
     };
 
     // 금액 계산 (최적화를 위해 useMemo 사용)
@@ -113,56 +128,44 @@
       return { billTotal, coinTotal, grandTotal };
     }, [quantities]);
 
-    // 새로운 기능: 목표 금액에서 지폐/동전 개수를 계산하는 함수
-    const calculateQuantitiesFromTarget = () => {
-      let amountToConvert = parseInt(inputTargetAmount) || 0;
-      if (amountToConvert < 0) amountToConvert = 0; // 음수 방지
-
-      const newQuantities = {};
-      denominations.forEach(denom => {
-        if (amountToConvert >= denom.value) {
-          const count = Math.floor(amountToConvert / denom.value);
-          newQuantities[denom.value] = String(count); // input value를 위해 문자열로 저장
-          amountToConvert -= count * denom.value; // 남은 금액 업데이트
-        } else {
-          newQuantities[denom.value] = ''; // 해당 화폐는 사용하지 않음
-        }
-      });
-      setQuantities(newQuantities); // 계산된 개수로 상태 업데이트
-    };
-
-
     // UI 구성 요소 렌더링
-    const renderItem = (denom) => (
-      // 화면 너비에 따라 자동으로 간격을 조정하는 justify-between을 사용합니다.
-      <div key={denom.value} className="flex items-center justify-between py-1 border-b border-gray-300">
-        <div className="flex-1 pr-1">
-          {/* 글자 크기를 text-sm으로 줄여서 공간 확보 */}
-          <span className="text-gray-700 text-sm font-medium whitespace-nowrap overflow-hidden text-ellipsis">{denom.name}</span>
-        </div>
+    const renderItem = (denom) => {
+      const currentQuantity = quantities[denom.value];
+      const currentAmount = (parseInt(currentQuantity) || 0) * denom.value;
 
-        <div className="flex items-center space-x-1 flex-shrink-0">
-          <input
-            type="text"
-            inputMode="numeric"
-            placeholder="0"
-            value={quantities[denom.value]}
-            onChange={(e) => handleInputChange(e.target.value, denom)}
-            // 입력 필드 높이 및 너비 조절, 텍스트는 오른쪽으로 정렬
-            className="w-16 h-8 text-right text-gray-800 text-sm font-bold bg-gray-200 rounded-md p-1 focus:outline-none focus:ring-2 focus:ring-blue-500 appearance-none [-moz-appearance:_textfield] [&::-webkit-inner-spin-button]:m-0 [&::-webkit-inner-spin-button]:appearance-none [&::-webkit-outer-spin-button]:m-0 [&::-webkit-outer-spin-button]:appearance-none"
-          />
-          <span className="text-gray-500 text-xs">개</span>
-        </div>
+      return (
+        <div key={denom.value} className="flex items-center justify-between py-1 border-b border-gray-300">
+          <div className="flex-1 pr-1">
+            <span className="text-gray-700 text-sm font-medium whitespace-nowrap overflow-hidden text-ellipsis">{denom.name}</span>
+          </div>
 
-        {/* 금액 부분은 자동으로 너비가 조절되도록 flex-1을 사용하고, 텍스트는 오른쪽 정렬합니다. */}
-        <div className="flex-1 flex items-center justify-end ml-2">
-          {/* 금액 글자 크기 조절 */}
-          <span className="font-semibold text-sm text-gray-900 whitespace-now-wrap overflow-hidden text-ellipsis">
-            {formatCurrency((parseInt(quantities[denom.value]) || 0) * denom.value)}
-          </span>
+          <div className="flex items-center space-x-1 flex-shrink-0">
+            {/* 개수 입력 필드 */}
+            <input
+              type="text"
+              inputMode="numeric"
+              placeholder="0"
+              value={currentQuantity}
+              onChange={(e) => handleQuantityChange(e.target.value, denom)}
+              className="w-16 h-8 text-right text-gray-800 text-sm font-bold bg-gray-200 rounded-md p-1 focus:outline-none focus:ring-2 focus:ring-blue-500 appearance-none [-moz-appearance:_textfield] [&::-webkit-inner-spin-button]:m-0 [&::-webkit-inner-spin-button]:appearance-none [&::-webkit-outer-spin-button]:m-0 [&::-webkit-outer-spin-button]:appearance-none"
+            />
+            <span className="text-gray-500 text-xs">개</span>
+          </div>
+
+          <div className="flex-1 flex items-center justify-end ml-2">
+            {/* 금액 입력 필드 (새로운 기능) */}
+            <input
+              type="text"
+              inputMode="numeric"
+              placeholder="0"
+              value={formatCurrency(currentAmount)} {/* 항상 포맷된 금액을 표시 */}
+              onChange={(e) => handleAmountChange(e.target.value, denom)}
+              className="w-28 h-8 text-right text-gray-800 text-sm font-bold bg-gray-200 rounded-md p-1 focus:outline-none focus:ring-2 focus:ring-blue-500 appearance-none [-moz-appearance:_textfield] [&::-webkit-inner-spin-button]:m-0 [&::-webkit-inner-spin-button]:appearance-none [&::-webkit-outer-spin-button]:m-0 [&::-webkit-outer-spin-button]:appearance-none"
+            />
+          </div>
         </div>
-      </div>
-    );
+      );
+    };
 
     return (
       // 컨테이너가 화면 전체 높이를 차지하도록 min-h-screen을 사용하고, flex-col로 콘텐츠를 중앙에 배치합니다.
@@ -183,36 +186,10 @@
             </button>
           </div>
 
-          {/* 새로운 기능: 금액을 개수로 변환 섹션 */}
-          <div className="bg-white rounded-xl p-2 shadow-md border border-gray-200">
-            <h2 className="text-base font-bold text-gray-800 mb-1">↔️ 금액을 개수로 변환</h2>
-            <div className="flex items-center space-x-2 py-1">
-              <input
-                type="text"
-                inputMode="numeric"
-                placeholder="총 금액 입력"
-                value={inputTargetAmount}
-                onChange={(e) => {
-                  const value = e.target.value.replace(/[^0-9]/g, ''); // 숫자만 허용
-                  setInputTargetAmount(value);
-                }}
-                className="flex-1 h-8 text-right text-gray-800 text-sm font-bold bg-gray-200 rounded-md p-1 focus:outline-none focus:ring-2 focus:ring-blue-500 appearance-none [-moz-appearance:_textfield] [&::-webkit-inner-spin-button]:m-0 [&::-webkit-inner-spin-button]:appearance-none [&::-webkit-outer-spin-button]:m-0 [&::-webkit-outer-spin-button]:appearance-none"
-              />
-              <button
-                onClick={calculateQuantitiesFromTarget}
-                className="px-3 py-1 bg-blue-600 text-white font-bold text-sm rounded-lg shadow-md hover:bg-blue-500 transition-colors duration-200"
-              >
-                계산
-              </button>
-            </div>
-          </div>
-
-
           {/* 지폐 섹션 */}
-          <div className="bg-white rounded-xl p-2 shadow-md border border-gray-200 mt-2"> {/* mt-2 추가로 간격 확보 */}
+          <div className="bg-white rounded-xl p-2 shadow-md border border-gray-200">
             <h2 className="text-base font-bold text-gray-800 mb-1">💵 지폐</h2>
             {denominations.filter(d => d.type === 'bill').map(renderItem)}
-            {/* 점선 제거 */}
             <div className="mt-2 pt-2 flex justify-between items-center font-bold text-sm text-gray-800">
               <span>지폐 소계:</span>
               <span>{formatCurrency(totals.billTotal)}</span>
@@ -223,7 +200,6 @@
           <div className="bg-white rounded-xl p-2 shadow-md border border-gray-200">
             <h2 className="text-base font-bold text-gray-800 mb-1">🪙 동전</h2>
             {denominations.filter(d => d.type === 'coin').map(renderItem)}
-            {/* 점선 제거 */}
             <div className="mt-2 pt-2 flex justify-between items-center font-bold text-sm text-gray-800">
               <span>동전 소계:</span>
               <span>{formatCurrency(totals.coinTotal)}</span>
